comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
   <main>
     <header>
-        <h1>titulosite</h1>
+        <h1>cursos gratis</h1>
     </header>
     <article>
-        <h2>artigo 001</h2>
-        <p>texto artigo 001</p>
+        <h2>curso de html 5 com css3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias inventore animi, atque at esse possimus veniam quia quos libero consectetur quas eaque sunt unde molestiae error dolorem, adipisci praesentium illum.</p>
     </article>
     <article>
-        <h2>artigo 002</h2>
-        <p>texto artigo 002</p>
+        <h2>curso de javascript</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit animi eveniet nobis consequatur accusantium delectus incidunt laborum, error aperiam perspiciatis officiis ipsum vel est dolores doloribus minus suscipit nesciunt recusandae.</p>
     </article>
   </main>  
 </body>
