--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
   <main>
     <header>
         <h1>cursos gratis</h1>
+        <img src="imagens/curso-em-video-cor.png" alt="cor">
     </header>
     <article>
         <h2>curso de html 5 com css3</h2>
+        <img class="lado" src="imagens/curso-html-css.png" alt="html">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias inventore animi, atque at esse possimus veniam quia quos libero consectetur quas eaque sunt unde molestiae error dolorem, adipisci praesentium illum.</p>
+        <p><a href="curso-html.html">acesse o curso de html 5</a></p>
     </article>
     <article>
         <h2>curso de javascript</h2>
+        <img class="lado" src="imagens/curso-javascript.png" alt="js">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit animi eveniet nobis consequatur accusantium delectus incidunt laborum, error aperiam perspiciatis officiis ipsum vel est dolores doloribus minus suscipit nesciunt recusandae.</p>
+        <p><a href="curso-js.html">acesse o curso de javascript</a></p>
     </article>
   </main>  
 </body>
